[package]
name = "rust-scylla-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
scylla = "1.1.0"
uuid = { version = "1.16.0", features = ["v4"] }
tower = "0.5.2"